# django_drf

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
payment/: apiviews.py  models.py  serializers.py  services.py  urls.py
payment/management/commands/: create_payment.py
payment/migrations/: 0001_initial.py
studies/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py
studies/apiviews/: lesson.py  well.py
studies/migrations/: 0001_initial.py  0002_lesson_author_well_author.py
subscription/: models.py  serializers.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py  0002_alter_subscription_user.py
users/: models.py  tasks.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_user_job_title.py
